# SeetaFace6

./: .gitignore  CMakeLists.txt  README.md
FaceAntiSpoofingX6/: CMakeLists.txt
FaceAntiSpoofingX6/FaceAntiSpoofingX/: CMakeLists.txt
FaceAntiSpoofingX6/cmake/: INC_ORZ.cmake
FaceAntiSpoofingX6/example/: CMakeLists.txt
FaceBoxes/: CMakeLists.txt
FaceBoxes/FaceDetector/: CMakeLists.txt
FaceBoxes/cmake/: INC_ORZ.cmake
FaceBoxes/example/: CMakeLists.txt
FaceRecognizer6/: CMakeLists.txt
FaceRecognizer6/FaceRecognizer/: CMakeLists.txt
FaceRecognizer6/example/: CMakeLists.txt
FaceTracker6/: CMakeLists.txt
FaceTracker6/FaceTracking/: CMakeLists.txt
FaceTracker6/example/: CMakeLists.txt
Landmarker/: CMakeLists.txt
Landmarker/Landmarker/: CMakeLists.txt
Landmarker/example/: CMakeLists.txt
OpenRoleZoo/: CMakeLists.txt
OpenRoleZoo/include/orz/codec/: json.h
OpenRoleZoo/include/orz/io/: i.h
OpenRoleZoo/include/orz/mem/: pot.h
PoseEstimator6/: CMakeLists.txt
PoseEstimator6/PoseEstimation/: CMakeLists.txt
QualityAssessor3/: CMakeLists.txt
QualityAssessor3/QualityAssessor/: CMakeLists.txt
QualityAssessor3/example/: CMakeLists.txt
SeetaAgePredictor/: CMakeLists.txt
SeetaAuthorize/: CMakeLists.txt
SeetaAuthorize/cmake/: FLAGS_GCC.cmake
SeetaEyeStateDetector/: CMakeLists.txt
SeetaEyeStateDetector/EyeStateDetector/: CMakeLists.txt
SeetaEyeStateDetector/example/: CMakeLists.txt
SeetaGenderPredictor/: CMakeLists.txt
SeetaGenderPredictor/cmake/: INC_ORZ.cmake
SeetaGenderPredictor/example/: CMakeLists.txt
SeetaMaskDetector/: CMakeLists.txt
SeetaMaskDetector/MaskDetector/: CMakeLists.txt
SeetaMaskDetector/example/: CMakeLists.txt
TenniS/lib/: tennisd.exp  tennisd.lib
example/qt/my/: CMakeLists.txt  main.cpp
example/qt/seetaface_demo/: CMakeLists.txt  mainwindow.cpp  videocapturethread.cpp  videocapturethread.h
